--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,10 +21,24 @@ services:
       dockerfile: Dockerfile
     container_name: userhub-frontend
     ports:
-      - "3000:3000"
+      - "3001:3000"
     environment:
       - NEXT_PUBLIC_POCKETBASE_URL=http://pocketbase:8090
     depends_on:
+      pocketbase:
+        condition: service_healthy
+    restart: unless-stopped
+
+  nginx:
+    image: nginx:alpine
+    container_name: userhub-gateway
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      frontend:
+        condition: service_started
       pocketbase:
         condition: service_healthy
     restart: unless-stopped
