--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -37,8 +37,16 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # PocketBase Admin
+        # PocketBase Admin (standard and /_admin alias)
         location /_/ {
+            proxy_pass http://pocketbase/_/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /_admin/ {
             proxy_pass http://pocketbase/_/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
