--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,29 @@
 # Dependencies
 node_modules/
+.npm
+/dist
+/build
 
 # Next.js
 .next/
 out/
+next-env.d.ts
 
-# PocketBase data
+# Turborepo
+.turbo/
+
+# PocketBase
 pocketbase/pb_data/
 pocketbase/pocketbase.exe
 pocketbase/pocketbase.zip
 pocketbase/pocketbase
+pocketbase/pb_migrations/*.swp
 
 # Environment
 .env
 .env.local
 .env.*.local
+*.env
 
 # IDE
 .vscode/
@@ -25,11 +34,16 @@ pocketbase/pocketbase
 # OS
 .DS_Store
 Thumbs.db
+desktop.ini
 
 # Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# Gemini
+# Gemini / Antigravity
 .gemini/
+.antigravity/
+.antigravityignore
+C:\Users\jizat\.gemini\antigravity\brain\
