--- a/.gitignore
+++ b/.gitignore
@@ -46,4 +46,4 @@ pnpm-debug.log*
 .gemini/
 .antigravity/
 .antigravityignore
-C:\Users\jizat\.gemini\antigravity\brain\
+C:/Users/jizat/.gemini/antigravity/brain/
